fix: spacing between text and icon

--- a/components/src/components/button/button.scss
+++ b/components/src/components/button/button.scss
@@ -3,9 +3,9 @@
 @import "./button-core";
 @import "../../helpers/components-shared.scss";
 
-$btn-default-height: 14rem;
-$btn-md-height: 12rem;
-$btn-sm-height: 10rem;
+$btn-default-height: 54px;
+$btn-md-height: 48px;
+$btn-sm-height: 40px;
 $btn-xs-height: 24px;
 $types: (primary, secondary, ghost, danger);
 $props: (background, border-color, color, outline-color);
@@ -14,7 +14,7 @@ $props: (background, border-color, color, outline-color);
   @include type-style("detail-02");
 
   display: inline-block;
-  border-radius: 1rem;
+  border-radius: 4px;
   border: none;
   box-shadow: none;
   position: relative;
@@ -26,7 +26,7 @@ $props: (background, border-color, color, outline-color);
   @include button-base;
 
   height: $btn-default-height;
-  padding: var(--sdds-spacing-element-20);
+  padding: 0 20px;
   border: 1px solid;
 
   &:disabled,
@@ -38,22 +38,13 @@ $props: (background, border-color, color, outline-color);
     @include sdds-focus-state;
   }
 
-  .sdds-btn-icon,
-  &.sdds-btn-icon {
-    fill: var(--sdds-grey-50);
-    color: var(--sdds-grey-50);
-    font-size: 4rem; //16px
-  }
-
   .sdds-btn-icon {
     margin-left: 28px;
-    width: 16px;
-    height: 16px;
     line-height: 0;
   }
 
   &.sdds-btn-xs {
-    padding: 4px 8px;
+    padding: 0 8px;
     height: $btn-xs-height;
 
     .sdds-btn-icon {
@@ -62,7 +53,7 @@ $props: (background, border-color, color, outline-color);
   }
 
   &.sdds-btn-sm {
-    padding: var(--sdds-spacing-element-12);
+    padding: 0 12px;
     height: $btn-sm-height;
 
     &:focus {
@@ -70,12 +61,12 @@ $props: (background, border-color, color, outline-color);
     }
 
     .sdds-btn-icon {
-      margin-left: 16px;
+      margin-left: 24px;
     }
   }
 
   &.sdds-btn-md {
-    padding: var(--sdds-spacing-element-16);
+    padding: 0 16px;
     height: $btn-md-height;
 
     &:focus {
@@ -93,7 +84,27 @@ $props: (background, border-color, color, outline-color);
 
     .sdds-btn-icon,
     &.sdds-btn-icon {
-      margin-left: 12px;
+      margin-left: 16px;
+    }
+  }
+
+  &.sdds-btn-icon-only {
+    padding: 0 18px;
+
+    &.sdds-btn-md {
+      padding: 0 15px;
+    }
+
+    &.sdds-btn-sm {
+      padding: 0 11px;
+    }
+
+    &.sdds-btn-xs {
+      padding: 0 8px;
+    }
+
+    .sdds-btn-icon {
+      margin-left: 0;
     }
   }
 
@@ -138,36 +149,62 @@ $props: (background, border-color, color, outline-color);
   }
 }
 
-::slotted([slot="icon"]) {
-  margin-left: var(--sdds-spacing-element-32);
-  width: var(--sdds-spacing-element-16);
-  height: var(--sdds-spacing-element-16);
+// Web component specific
+
+:host(sdds-button) {
+  display: inline-block;
 }
 
-.sdds-btn-xs {
-  ::slotted([slot="icon"]) {
-    margin-left: 8px;
+.sdds-btn {
+  &.sdds-btn-only-icon {
+    padding: 0 16px;
+
+    ::slotted([slot="icon"]) {
+      margin-left: 0;
+    }
   }
-}
 
-.sdds-btn-sm {
   ::slotted([slot="icon"]) {
-    margin-left: 12px;
+    margin-left: 28px;
   }
 }
 
 .sdds-btn-md {
+  &.sdds-btn-only-icon {
+    padding: 0 13px;
+
+    ::slotted([slot="icon"]) {
+      margin-left: 0;
+    }
+  }
+
   ::slotted([slot="icon"]) {
-    margin-left: 16px;
+    margin-left: 20px;
   }
 }
 
-.sdds-btn-only-icon {
+.sdds-btn-sm {
+  &.sdds-btn-only-icon {
+    padding: 0 11px;
+
+    ::slotted([slot="icon"]) {
+      margin-left: 0;
+    }
+  }
+
   ::slotted([slot="icon"]) {
-    margin-left: 0;
+    margin-left: 24px;
   }
 }
 
-:host(sdds-button) {
-  display: inline-block;
+.sdds-btn-xs {
+  &.sdds-btn-only-icon {
+    ::slotted([slot="icon"]) {
+      margin-left: 0;
+    }
+  }
+
+  ::slotted([slot="icon"]) {
+    margin-left: 8px;
+  }
 }
